--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
-
 {
-  "start": "node server.js"
+  "name": "urban-mining-backend",
+  "version": "1.0.0",
+  "description": "Backend for UrbanMining Kenya referral and mining system",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "node --watch server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
