--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://newtonmulti_db_user:dlknSXuwMy1DwwOQ@cluster0.yybpsbh.mongodb.net/?appName=Cluster0
 PORT=5000
+TELEGRAM_BOT_TOKEN=8305012784:AAH_kLIiqQ1sJ5vIlYOKHK985j26_kE1ubQ
+TELEGRAM_CHAT_ID=8355316248
