--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 MONGO_URI=mongodb+srv://newtonmulti_db_user:dlknSXuwMy1DwwOQ@cluster0.yybpsbh.mongodb.net/?appName=Cluster0
 PORT=5000
+# Main Bot (Payments/Withdrawals)
 TELEGRAM_BOT_TOKEN=8305012784:AAH_kLIiqQ1sJ5vIlYOKHK985j26_kE1ubQ
 TELEGRAM_CHAT_ID=8355316248
+
+# New User Bot (Registration Alerts)
+USER_BOT_TOKEN=8473769443:AAE-_2rASlC03gYG4toi0lM2CQ7mIM-gWHU
+USER_CHAT_ID=8355316248
